<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <!-- Seed rate -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seed_rate" />

                <ListView
                    android:id="@+id/seed_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <!-- Transplanting -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transplanting" />

                <ListView
                    android:id="@+id/transplanting"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <!-- Spacing -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/spacing" />

                <ListView
                    android:id="@+id/spacing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <!-- Month Of Sowing -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/months" />

                <ListView
                    android:id="@+id/months"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!-- Season -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/season" />

                <ListView
                    android:id="@+id/season"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!-- Weed Control -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weed" />

                <ListView
                    android:id="@+id/weed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!-- Disease Control -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/disease" />

                <ListView
                    android:id="@+id/disease"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!-- Insect Control -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/insect" />

                <ListView
                    android:id="@+id/insect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
        </LinearLayout>
</ScrollView>
