<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Home">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/Home"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <Button
        android:id="@+id/MyFarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="104dp"
        android:background="@color/colorPrimary"
        android:text="@string/MyFarm"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/DailyActivityList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/MyFarm"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="104dp"
        android:background="@color/colorPrimary"
        android:text="@string/DailyActivityList"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/KnowledgeCentre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/DailyActivityList"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="104dp"
        android:background="@color/colorPrimary"
        android:text="@string/KnowledgeCentre"
        android:textColor="#ffffff" />

</RelativeLayout>
